--- a/404.html
+++ b/404.html
@@ -6,36 +6,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<!-- Internal CSS -->
-	<style>
-		html {
-			margin-left: calc(100vw - 100%);
-		}
-
-		body {
-			font-size: 18px;
-			overflow: auto;
-			font-family: 'Quicksand', sans-serif;
-		}
-
-		nav.navbar {
-			background-color: #E3F2FD;
-		}
-
-		@media (min-width: 992px) {
-			body {
-				margin-top: 59px;
-			}
-		}
-
-		@media (max-width: 991.98px) {
-			body {
-				margin-top: 56px;
-			}
-		}
-	</style>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link href="CSS/custom.css" rel="stylesheet">
 	<link rel="icon" type="image/png" href="Images/Favicon/favicon-32x32.png" sizes="32x32" />
 	<title>404 - Page Not Found</title>
 	<meta name="DESCRIPTION" content="Brian Pho 404 page" />
@@ -45,56 +18,61 @@
 <body>
 	<header>
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light">
-			<a class="navbar-brand" href="index.html">
-				<img src="Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top"
-					alt="Brian Pho Favicon">
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-					<li class="nav-item active">
-						<a class="nav-link" href="https://brianpho.com/HTML/index.html">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="https://brianpho.com/HTML/courses.html">Courses</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="https://brianpho.com/HTML/projects.html">Projects</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="https://brianpho.com/HTML/gallery.html">Gallery</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="https://brianpho.com/HTML/about.html">About</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="https://brianpho.com/HTML/contact.html">Contact</a>
-					</li>
-				</ul>
+			<div class="container-fluid">
+				<a class="navbar-brand" href="index.html">
+					<img src="Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top"
+						alt="Brian Pho Favicon">
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto">
+						<li class="nav-item">
+							<a class="nav-link" href="https://brianpho.com/HTML/index.html">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="https://brianpho.com/HTML/courses.html">Courses</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="https://brianpho.com/HTML/gallery.html">Gallery</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="https://brianpho.com/HTML/about.html">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="https://brianpho.com/HTML/contact.html">Contact</a>
+						</li>
+					</ul>
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="https://brianpho.com/CR4-DL">CR4-DL</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="https://brianpho.com/Cadence">Cadence</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</nav>
 	</header>
-	<div class="container-fluid" style="display: flex; height: 90vh; align-items: center;">
+
+	<div class="container-fluid position-fixed d-flex flex-column justify-content-center h-100">
 		<div class="container text-center">
-			<h1 class="display-4">Oh Noes!</h1>
-			<h2 class="display-4">Error 404: Page Not Found</h2>
-			<h3 class="display-5">The page you tried to view does not exist.</h3>
-			<h3 class="display-5">
+			<h1 class="display-5">Oh Noes!</h1>
+			<h2 class="display-5">Error 404: Page Not Found</h2>
+			<h3>The page you tried to view does not exist.</h3>
+			<h3>
 				<a href="https://brianpho.com">Click here to return back to the main site.</a>
 			</h3>
 		</div>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-	</script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-	</script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+
+	<!-- Bootstrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
 	</script>
 </body>
 
