--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -6,62 +6,61 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<!-- Font Awesome JS -->
-	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link href="../CSS/custom.css" rel="stylesheet">
 	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32" />
 	<title>Contact</title>
 	<meta name="DESCRIPTION" content="This is information on how to contact Brian Pho." />
 	<meta name="KEYWORDS" content="Brian Pho, contact" />
+	<!-- Font Awesome JS -->
+	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 
 <body>
 	<header>
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light">
-			<a class="navbar-brand" href="index.html">
-				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top"
-					alt="Brian Pho Favicon">
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="index.html">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="courses.html">Courses</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="projects.html">Projects</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="gallery.html">Gallery</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="about.html">About</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="contact.html">Contact
-							<span class="sr-only">(current)</span>
-						</a>
-					</li>
-				</ul>
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" href="/CR4-DL">CR4-DL</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/Cadence">Cadence</a>
-					</li>
-				</ul>
+			<div class="container-fluid">
+				<a class="navbar-brand" href="index.html">
+					<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30"
+						class="d-inline-block align-top" alt="Brian Pho Favicon">
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto">
+						<li class="nav-item">
+							<a class="nav-link" href="index.html">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="courses.html">Courses</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="gallery.html">Gallery</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="about.html">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+						</li>
+					</ul>
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="/CR4-DL">CR4-DL</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/Cadence">Cadence</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</nav>
 	</header>
+
 	<div class="container text-center">
 		<h1 class="display-4">Contact</h1>
 		<p class="lead">
@@ -70,12 +69,11 @@
 		<hr>
 		<div class="row">
 			<div class="col-lg-6 mx-auto">
-				<form action="https://formspree.io/f/mqkwaavn" method="POST" class="needs-validation"
-					novalidate>
+				<form action="https://formspree.io/f/mqkwaavn" method="POST" class="needs-validation" novalidate>
 					<input type="hidden" name="_next" value="/HTML/contact.html" />
 					<input type="hidden" name="_subject" value="Message from brianpho.com" />
 					<input type="text" name="_gotcha" style="display:none" />
-					<div class="form-group">
+					<div class="form-group mb-3">
 						<label for="InputName">Name</label>
 						<input type="text" class="form-control" id="validationCustom01" name="Sender Name"
 							placeholder="Gimme name" required>
@@ -83,10 +81,10 @@
 							Looks good!
 						</div>
 						<div class="invalid-feedback">
-							Please enter a name.
+							Please enter a name
 						</div>
 					</div>
-					<div class="form-group">
+					<div class="form-group mb-3">
 						<label for="InputEmail">Email</label>
 						<input type="email" class="form-control" id="validationCustom02" name="_replyto"
 							placeholder="Gimme email" required>
@@ -94,10 +92,10 @@
 							Looks good!
 						</div>
 						<div class="invalid-feedback">
-							Please enter an email.
+							Please enter an email
 						</div>
 					</div>
-					<div class="form-group">
+					<div class="form-group mb-3">
 						<label for="InputMessage">Message</label>
 						<textarea name="Message" class="form-control" id="validationCustom03" rows="5"
 							placeholder="Gimme credit card number" required></textarea>
@@ -105,7 +103,7 @@
 							Looks good!
 						</div>
 						<div class="invalid-feedback">
-							Please enter a message.
+							Please enter a message
 						</div>
 					</div>
 					<button type="submit" class="btn btn-outline-primary" id="btn">Submit</button>
@@ -129,14 +127,10 @@
 		</a>
 	</div>
 	<script src="../JS/form_validation.js"></script>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-	</script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-	</script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+
+	<!-- Bootstrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
 	</script>
 </body>
 
