--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -6,8 +6,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link href="../CSS/custom.css" rel="stylesheet">
 	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32" />
 	<title>Courses</title>
@@ -18,73 +18,69 @@
 <body>
 	<header>
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light">
-			<a class="navbar-brand" href="index.html">
-				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top"
-					alt="Brian Pho Favicon">
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="index.html">Home</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="courses.html">Courses
-							<span class="sr-only">(current)</span>
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="projects.html">Projects</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="gallery.html">Gallery</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="about.html">About</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contact</a>
-					</li>
-				</ul>
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" href="/CR4-DL">CR4-DL</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/Cadence">Cadence</a>
-					</li>
-				</ul>
+			<div class="container-fluid">
+				<a class="navbar-brand" href="index.html">
+					<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30"
+						class="d-inline-block align-top" alt="Brian Pho Favicon">
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto">
+						<li class="nav-item">
+							<a class="nav-link" href="index.html">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="courses.html">Courses</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="gallery.html">Gallery</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="about.html">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contact.html">Contact</a>
+						</li>
+					</ul>
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="/CR4-DL">CR4-DL</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/Cadence">Cadence</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</nav>
 	</header>
-	<div class="container text-center">
-		<h1 class="display-4">Courses</h1>
-		<div class="lead text-left">
+	<div class="container">
+		<h1 class="text-center display-4">Courses</h1>
+		<div class="lead">
 			<p>
-				I've completed my bachelors in software engineering at the University of Calgary and have moved
-				on to a masters in neuroscience at Western University. If you're looking for my course notes, you can
+				I completed my bachelors in software engineering at the University of Calgary and I'm currently in
+				a masters in neuroscience at Western University. If you're looking for my course notes, you can
 				find them <a href="https://brianpho.com/CR4-DL/notes/">here</a>. Hover over a course to see its title.
 			</p>
 		</div>
 		<hr>
 
-		<div id="accordion">
-			<div class="card">
-				<div class="card-header" id="headingOne">
-					<h5 class="mb-0">
-						<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
-							aria-controls="collapseOne">
-							Bachelors in Software Engineering
-						</button>
-					</h5>
-				</div>
-
-				<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-					<div class="card-body">
-						<table class="table table-bordered table-hover">
+		<div class="accordion accordion-flush" id="accordionFlush">
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="flush-headingOne">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+						data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+						Bachelors in Software Engineering
+					</button>
+				</h2>
+				<div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+					data-bs-parent="#accordionFlush">
+					<div class="accordion-body text-center">
+						<table class="table table-bordered">
 							<thead>
 								<tr class="academic_year">
 									<th colspan="4" scope="colgroup">Year 1 (2015 - 2016)</th>
@@ -129,7 +125,7 @@
 								</tr>
 							</tbody>
 						</table>
-						<table class="table table-bordered table-hover">
+						<table class="table table-bordered">
 							<thead>
 								<tr class="academic_year">
 									<th colspan="4" scope="colgroup">Year 2 (2016 - 2017)</th>
@@ -176,7 +172,7 @@
 								</tr>
 							</tbody>
 						</table>
-						<table class="table table-bordered table-hover">
+						<table class="table table-bordered">
 							<thead>
 								<tr class="academic_year">
 									<th colspan="4" scope="colgroup">Year 3 (2017 - 2018)</th>
@@ -220,7 +216,7 @@
 								</tr>
 							</tbody>
 						</table>
-						<table class="table table-bordered table-hover">
+						<table class="table table-bordered">
 							<thead>
 								<tr class="academic_year">
 									<th colspan="4" scope="colgroup">Year 4 (2018 - 2019)</th>
@@ -240,7 +236,7 @@
 								</tr>
 							</tbody>
 						</table>
-						<table class=" table table-bordered table-hover">
+						<table class=" table table-bordered">
 							<thead>
 								<tr class="academic_year">
 									<th colspan="4" scope="colgroup">Year 5 (2019 - 2020)</th>
@@ -289,18 +285,19 @@
 					</div>
 				</div>
 			</div>
-			<div class="card">
-				<div class="card-header" id="headingTwo">
-					<h5 class="mb-0">
-						<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
-							aria-expanded="false" aria-controls="collapseTwo">
-							Masters in Neuroscience
-						</button>
-					</h5>
-				</div>
-				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-					<div class="card-body">
-						<table class="table table-bordered table-hover">
+
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="flush-headingTwo">
+
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+						data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+						Masters in Neuroscience
+					</button>
+				</h2>
+				<div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+					data-bs-parent="#accordionFlush">
+					<div class="accordion-body text-center">
+						<table class="table table-bordered">
 							<thead>
 								<tr class="academic_year">
 									<th colspan="4" scope="colgroup">Year 1 (2020 - 2021)</th>
@@ -322,7 +319,7 @@
 								</tr>
 							</tbody>
 						</table>
-						<table class="table table-bordered table-hover">
+						<table class="table table-bordered">
 							<thead>
 								<tr class="academic_year">
 									<th colspan="4" scope="colgroup">Year 2 (2021 - 2022)</th>
@@ -342,21 +339,17 @@
 					</div>
 				</div>
 			</div>
-
-			<hr>
-			<p class="text-center">
-				<a href="#top" class="btn btn-outline-info">Back to Top</a>
-			</p>
 		</div>
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-			integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-		</script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-			integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-		</script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-		</script>
+		<hr>
+		<p class="text-center">
+			<a href="#top" class="btn btn-outline-info">Back to Top</a>
+		</p>
+	</div>
+
+	<!-- Bootstrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+	</script>
 </body>
 
 </html>
