--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -6,8 +6,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link href="../CSS/custom.css" rel="stylesheet">
 	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32" />
 	<title>Gallery</title>
@@ -18,259 +18,85 @@
 <body>
 	<header>
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light">
-			<a class="navbar-brand" href="index.html">
-				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top"
-					alt="Brian Pho Favicon">
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="index.html">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="courses.html">Courses</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="projects.html">Projects</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link active" href="gallery.html">Gallery
-							<span class="sr-only">(current)</span>
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="about.html">About</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contact</a>
-					</li>
-				</ul>
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" href="/CR4-DL">CR4-DL</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/Cadence">Cadence</a>
-					</li>
-				</ul>
+			<div class="container-fluid">
+				<a class="navbar-brand" href="index.html">
+					<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30"
+						class="d-inline-block align-top" alt="Brian Pho Favicon">
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto">
+						<li class="nav-item">
+							<a class="nav-link" href="index.html">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="courses.html">Courses</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="gallery.html">Gallery</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="about.html">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contact.html">Contact</a>
+						</li>
+					</ul>
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="/CR4-DL">CR4-DL</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/Cadence">Cadence</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</nav>
 	</header>
-	<div class="container text-center">
-		<h1 class="display-4">Gallery</h1>
+
+	<div class="container">
+		<h1 class="text-center display-4">Gallery</h1>
 		<p class="lead">
-			Pictures of me. The pictures are somewhat misleading since I got implantable contact lenses and no longer
-			wear glasses. The pictures are clickable for amusing captions.
+			Pictures of me. I no longer wear glasses because I got implanted contact lenses.
 		</p>
-		<hr> ​
-		<picture>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho1.jpg" class="img-fluid mb-1"
-				data-toggle="modal" data-target="#brianpho1" alt="A picture of me" />
-			<div class="modal fade" id="brianpho1" tabindex="-1" role="dialog" aria-hidden="true">
-				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-					<div class="modal-content">
-						<div class="modal-body">
-							<figure class="figure">
-								<img src="../Images/BrianPho/brianpho1.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">Portrait in Bedroom (2016)</figcaption>
-							</figure>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho2.jpg" class="img-fluid mb-1"
-				data-toggle="modal" data-target="#brianpho2" alt="A picture of me" />
-			<div class="modal fade" id="brianpho2" tabindex="-1" role="dialog" aria-hidden="true">
-				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-					<div class="modal-content">
-						<div class="modal-body">
-							<figure class="figure">
-								<img src="../Images/BrianPho/brianpho2.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">Bowness Park BBQ (2017)</figcaption>
-							</figure>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho3.jpg" class="img-fluid mb-1"
-				data-toggle="modal" data-target="#brianpho3" alt="A picture of me" />
-			<div class="modal fade" id="brianpho3" tabindex="-1" role="dialog" aria-hidden="true">
-				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-					<div class="modal-content">
-						<div class="modal-body">
-							<figure class="figure">
-								<img src="../Images/BrianPho/brianpho3.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">High School Graduation (2015)</figcaption>
-							</figure>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho4.jpg" class="img-fluid mb-1"
-				data-toggle="modal" data-target="#brianpho4" alt="A picture of me" />
-			<div class="modal fade" id="brianpho4" tabindex="-1" role="dialog" aria-hidden="true">
-				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-					<div class="modal-content">
-						<div class="modal-body">
-							<figure class="figure">
-								<img src="../Images/BrianPho/brianpho4.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">University Station (2017)</figcaption>
-							</figure>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho5.jpg" class="img-fluid mb-1"
-				data-toggle="modal" data-target="#brianpho5" alt="A picture of me" />
-			<div class="modal fade" id="brianpho5" tabindex="-1" role="dialog" aria-hidden="true">
-				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-					<div class="modal-content">
-						<div class="modal-body">
-							<figure class="figure">
-								<img src="../Images/BrianPho/brianpho5.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">Body Pic (2017)</figcaption>
-							</figure>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho6.jpg" class="img-fluid mb-1"
-				data-toggle="modal" data-target="#brianpho6" alt="A picture of me" />
-			<div class="modal fade" id="brianpho6" tabindex="-1" role="dialog" aria-hidden="true">
-				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-					<div class="modal-content">
-						<div class="modal-body">
-							<figure class="figure">
-								<img src="../Images/BrianPho/brianpho6.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">Scientist Brian (2017)</figcaption>
-							</figure>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho7.jpg" class="img-fluid mb-1"
-				data-toggle="modal" data-target="#brianpho7" alt="A picture of me" />
-			<div class="modal fade" id="brianpho7" tabindex="-1" role="dialog" aria-hidden="true">
-				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-					<div class="modal-content">
-						<div class="modal-body">
-							<figure class="figure">
-								<img src="../Images/BrianPho/brianpho7.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">Pason Interns at the Christmas Dinner Party (2018)
-								</figcaption>
-							</figure>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho8.jpg" class="img-fluid mb-1"
-				data-toggle="modal" data-target="#brianpho8" alt="A picture of me" />
-			<div class="modal fade" id="brianpho8" tabindex="-1" role="dialog" aria-hidden="true">
-				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-					<div class="modal-content">
-						<div class="modal-body">
-							<figure class="figure">
-								<img src="../Images/BrianPho/brianpho8.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">First Banff Trip (2018)</figcaption>
-							</figure>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho9.jpg" class="img-fluid mb-1"
-				data-toggle="modal" data-target="#brianpho9" alt="A picture of me" />
-			<div class="modal fade" id="brianpho9" tabindex="-1" role="dialog" aria-hidden="true">
-				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-					<div class="modal-content">
-						<div class="modal-body">
-							<figure class="figure">
-								<img src="../Images/BrianPho/brianpho9.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">Updated Portrait (2019)</figcaption>
-							</figure>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho10.jpg" class="img-fluid mb-1"
-				data-toggle="modal" data-target="#brianpho10" alt="A picture of me" />
-			<div class="modal fade" id="brianpho10" tabindex="-1" role="dialog" aria-hidden="true">
-				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-					<div class="modal-content">
-						<div class="modal-body">
-							<figure class="figure">
-								<img src="../Images/BrianPho/brianpho10.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">Me post-Lasik surgery with my favourite black coat
-									(2019)</figcaption>
-							</figure>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho11.jpg" class="img-fluid mb-1"
-				data-toggle="modal" data-target="#brianpho11" alt="A picture of me" />
-			<div class="modal fade" id="brianpho11" tabindex="-1" role="dialog" aria-hidden="true">
-				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-					<div class="modal-content">
-						<div class="modal-body">
-							<figure class="figure">
-								<img src="../Images/BrianPho/brianpho11.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">Pandemic Pho (2021)</figcaption>
-							</figure>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</picture>
+		<hr>
+		<div class="text-center">
+			<img src="../Images/BrianPho/brianpho1.jpg" class="img-fluid mb-1" />
+
+			<img src="../Images/BrianPho/brianpho2.jpg" class="img-fluid mb-1" />
+
+			<img src="../Images/BrianPho/brianpho3.jpg" class="img-fluid mb-1" />
+
+			<img src="../Images/BrianPho/brianpho4.jpg" class="img-fluid mb-1" />
+
+			<img src="../Images/BrianPho/brianpho5.jpg" class="img-fluid mb-1" />
+
+			<img src="../Images/BrianPho/brianpho6.jpg" class="img-fluid mb-1" />
+
+			<img src="../Images/BrianPho/brianpho7.jpg" class="img-fluid mb-1" />
+
+			<img src="../Images/BrianPho/brianpho8.jpg" class="img-fluid mb-1" />
+
+			<img src="../Images/BrianPho/brianpho9.jpg" class="img-fluid mb-1" />
+
+			<img src="../Images/BrianPho/brianpho10.jpg" class="img-fluid mb-1" />
+
+			<img src="../Images/BrianPho/brianpho11.jpg" class="img-fluid mb-1" />
+		</div>
 		<hr>
 		<p class="text-center">
 			<a href="#top" class="btn btn-outline-info">Back to Top</a>
 		</p>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-	</script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-	</script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+
+	<!-- Bootstrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
 	</script>
 </body>
 
