--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,8 +6,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link href="../CSS/custom.css" rel="stylesheet">
 	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32" />
 	<title>Home</title>
@@ -18,76 +18,65 @@
 <body class="homepage">
 	<header>
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light">
-			<a class="navbar-brand" href="index.html">
-				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top"
-					alt="Brian Pho Favicon">
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="index.html">Home
-							<span class="sr-only">(current)</span>
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="courses.html">Courses</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="projects.html">Projects</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="gallery.html">Gallery</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="about.html">About</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contact</a>
-					</li>
-				</ul>
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" href="/CR4-DL">CR4-DL</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/Cadence">Cadence</a>
-					</li>
-				</ul>
+			<div class="container-fluid">
+				<a class="navbar-brand" href="index.html">
+					<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30"
+						class="d-inline-block align-top" alt="Brian Pho Favicon">
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="courses.html">Courses</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="gallery.html">Gallery</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="about.html">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contact.html">Contact</a>
+						</li>
+					</ul>
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="/CR4-DL">CR4-DL</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/Cadence">Cadence</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</nav>
 	</header>
 
 	<!-- Homepage left-center text -->
-	<div class="container-fluid position-fixed d-flex flex-column justify-content-center h-100 homepage-text">
-		<div class="row ml-4">
-			<h1 class="display-4" style="color: #E3F2FD;">Brian Pho</h1>
+	<div class="container-fluid position-fixed d-flex flex-column justify-content-center h-100 homepage-text ms-4">
+		<div class="row">
+			<h1 class="display-4" id="homepage-name">Brian Pho</h1>
 		</div>
-		<div class="row ml-4">
-			<div class="lead">MSc Neuroscience</div>
-		</div>
-		<div class="row ml-4">
-			<div class="lead">Western University</div>
+		<div class="row">
+			<div class="lead">Software Engineer & Neuroscientist</div>
 		</div>
 	</div>
 	<!-- Homepage background animation -->
 	<canvas id="homepage-animation" class="container-fluid p-0"></canvas>
 
 	<!-- Pts JS -->
-	<script src="https://unpkg.com/pts@0.9.1/dist/pts.min.js"></script>
+	<script src="https://unpkg.com/pts@0.10.9/dist/pts.min.js"></script>
 	<script src="../JS/homepage.js"></script>
 	<!-- Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-	</script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-	</script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
 	</script>
 </body>
 
